<resources>
    <string name="app_name">Remind Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appTitle">Remind\nPassword</string>
    <string name="appVer">버전 1.0.0</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="write">작성</string>
    <string name="search">검색</string>
    <string name="logout">로그아웃</string>
    <string name="top">상단으로</string>
    <string name="register">등록</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="memo">메모</string>
    <string name="title">제목</string>
    <string name="edit">편집</string>
    <string name="date">날짜</string>
    <string name="later">나중에 하기</string>
    <string name="use">사용하기</string>
    <string name="restoreAll">모두 복원</string>
    <string name="dialogTitle">DATA</string>
    <string name="restore">복원</string>
    <string name="delete">삭제</string>
    <string name="setting">설정</string>
    <string name="itemsAll">모든 항목</string>
    <string name="inputMail">이메일 입력</string>
    <string name="createAccount">이메일 계정생성</string>
    <string name="existAccount">계정이 이미 있으신가요?</string>
    <string name="password">비밀번호</string>
    <string name="checkPassword">비밀번호 확인</string>
    <string name="inputPassword">비밀번호 입력</string>
    <string name="resetPassword">비밀번호 재설정</string>
    <string name="decryptPassword">비밀번호 복호화</string>
    <string name="prePassword">이전 비밀번호로 저장</string>
    <string name="activePassword">비밀번호 활성화</string>
    <string name="resetPasswordTitle">계정생성 시 등록한\n이메일 주소를 입력해주세요</string>
    <string name="setPasswordTitle">비밀번호 설정</string>
    <string name="setPasswordSubtitle">비밀번호 4자리를 설정하세요</string>
    <string name="setPasswordAlert">이전에 사용한 비밀번호는 사용할 수 없습니다</string>
    <string name="confirmPasswordTitle">비밀번호 확인</string>
    <string name="confirmPasswordSubtitle">비밀번호 4자리를 다시 한번 입력하세요</string>
    <string name="confirmPasswordAlert">비밀번호가 일치하지 않습니다</string>
    <string name="biometric">생체 인식 및 보안</string>
    <string name="fingerPassTitle">생체인증을\n사용하시겠어요?</string>
    <string name="fingerPassSubtitle">생체인증을 이용해 보안을 강화하세요</string>
    <string name="deleteAccount">계정 삭제하기</string>
    <string name="devInfo">개발자 정보</string>
    <string name="devSubtitle">Made with youuungh</string>
    <string name="addFavorite">즐겨찾기에 추가</string>
    <string name="trash">휴지통</string>
    <string name="moveTrash">휴지통으로 이동</string>
    <string name="emptyTrash">휴지통이 비었습니다</string>
    <string name="deleteTrash">휴지통 비우기</string>
    <string name="emptyTitle">항목이 없습니다</string>
    <string name="emptySubtitle">작성하려면 추가 버튼을 누르세요</string>
    <string name="searchNoResult">검색 결과가 없습니다</string>
    <string name="deleteAccountTitle">계정을 삭제하시겠습니까?</string>
    <string name="deleteAccountSubtitle">사용자의 계정 및 모든 정보가 영구적으로 삭제되고, 복구가 불가능합니다</string>
    <string name="deleteAccountCheck">계정을 삭제하는 것에 동의합니다</string>
</resources>