<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:gravity="center">
    
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_alert"
        android:contentDescription="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/deleteAccountTitle"
        android:textStyle="bold"
        android:textColor="@color/customTextColor"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/deleteAccountSubtitle"
        android:textColor="@color/customTextColor"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>

    <CheckBox
        android:id="@+id/checkbox_clear_data"
        style="@style/CustomCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/deleteAccountCheck"
        android:textStyle="bold"
        android:textColor="@color/customTextColor"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>
</LinearLayout>