<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tibs_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="3dp"
    android:paddingBottom="16dp"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trash_option_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="64dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/dialogTitle"
            android:textColor="@color/customTextColor"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:maxLines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trash_option_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_restore"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/restore"
            android:textColor="@color/customTextColor"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trash_option_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trash_empty"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/delete"
            android:textColor="@color/error"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"/>
    </LinearLayout>

</LinearLayout>