<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signup_layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/signup_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="계정생성"
            app:titleCentered="true"
            app:titleTextColor="@color/customTextColor"
            app:navigationIcon="@drawable/ic_arrow_left"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/signupScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_layout_appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_layout_email"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="0dp"
                android:focusableInTouchMode="true"
                app:endIconMode="clear_text"
                app:endIconDrawable="@drawable/ic_clear_text"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeErrorColor="?attr/colorError"
                app:hintEnabled="false"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputMail"
                    android:fontFamily="@font/dm_sans"
                    android:textColorHighlight="@color/textHighlight"
                    android:inputType="textEmailAddress"
                    android:longClickable="false"
                    android:textColorHint="?android:textColorHint"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_layout_password"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="0dp"
                android:focusableInTouchMode="true"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/custom_password_toggle"
                app:endIconCheckable="true"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeErrorColor="?attr/colorError"
                app:hintEnabled="false"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputPassword"
                    android:fontFamily="@font/dm_sans"
                    android:textColorHighlight="@color/textHighlight"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:textColorHint="?android:textColorHint"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_layout_passCheck"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="0dp"
                android:focusableInTouchMode="true"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/custom_password_toggle"
                app:endIconCheckable="true"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeErrorColor="?attr/colorError"
                app:hintEnabled="false"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_passCheck"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/checkPassword"
                    android:fontFamily="@font/dm_sans"
                    android:textColorHighlight="@color/textHighlight"
                    android:inputType="textPassword"
                    android:longClickable="true"
                    android:textColorHint="?android:textColorHint"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/existAccount"
                    android:textColor="@color/customTextColor"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/login"
                    android:textSize="15sp"
                    android:textColor="#49454f"
                    android:textStyle="bold"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_horizontal|center_vertical"
                    app:backgroundTint="@null"
                    android:background="@drawable/flag_login_button"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:enabled="false"/>

                <ProgressBar
                    android:id="@+id/signup_progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:translationZ="2dp"
                    android:visibility="invisible"
                    android:indeterminateTint="@color/white"
                    android:progressDrawable="@drawable/custom_progressbar"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>